--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "tailwindcss-animate": "^1.0.7",
