--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
     "removeComments": true,
     "strict": true,
     "esModuleInterop": true,
@@ -13,7 +12,11 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": "../",
+    "paths": {
+      "@client/*": ["client/src/*"]
+    }
   },
   "include": [
     "src/**/*"
