fix(server): fix the server error as the @client/* path mapping doesn't work at runtime with ts-node

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,11 +12,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "baseUrl": "../",
-    "paths": {
-      "@client/*": ["client/src/*"]
-    }
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
