chore: add axios

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
+    "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.0",
